crates/specforge-cli/tests/snapshots/tests__check_surfaces__cli_check_cache_body_parser_type_cache.snap
---
source: crates/specforge-cli/tests/check_surfaces.rs
expression: "normalized(&doc, dir.path())"
---
{
  "cache_file": "{\n  \"format\": 1,\n  \"statuses\": {}\n}\n",
  "exit": 0,
  "stderr": ""
}
