crates/specforge-cli/tests/snapshots/tests__check_surfaces__cli_check_cache_product_cycle_cache.snap
---
source: crates/specforge-cli/tests/check_surfaces.rs
expression: "normalized(&doc, dir.path())"
---
{
  "cache_file": null,
  "exit": 1,
  "stderr": "note: specforge-cache.json not written: the check failed\n"
}
