crates/specforge-cli/tests/snapshots/tests__check_surfaces__cli_check_human_clean.snap
---
source: crates/specforge-cli/tests/check_surfaces.rs
expression: "normalized(&doc, dir.path())"
---
{
  "exit": 0,
  "stderr": "0 errors, 0 warnings, 0 infos\n"
}
