crates/specforge-cli/tests/snapshots/tests__check_surfaces__cli_check_human_missing_import.snap
---
source: crates/specforge-cli/tests/check_surfaces.rs
expression: "normalized(&doc, dir.path())"
---
{
  "exit": 1,
  "stderr": "[E025] Error: import target not found: missing\n   ╭─[ main.spec:1:1 ]\n   │\n 1 │ use \"missing\"\n   │ ──────┬──────\n   │       ╰────────\n───╯\n1 error, 0 warnings, 0 infos\n  E025 (1)\n\nhint: run `specforge explain <code>` for details on any diagnostic code\n"
}
