crates/specforge-cli/tests/snapshots/tests__check_surfaces__cli_check_human_product_cycle.snap
---
source: crates/specforge-cli/tests/check_surfaces.rs
expression: "normalized(&doc, dir.path())"
---
{
  "exit": 1,
  "stderr": "warning[W061]: reference cycle detected: core_mod -> edge_mod -> core_mod\n  = help: break the cycle by removing or inverting one reference\n\n[E007] Error: module dependency cycle detected involving 'core_mod'\n   ╭─[ main.spec:1:1 ]\n   │\n 1 │ ╭─▶ module core_mod \"Core\" {\n   ┆ ┆\n 4 │ ├─▶ }\n   │ │\n   │ ╰───────\n───╯\n\n[E007] Error: module dependency cycle detected involving 'edge_mod'\n   ╭─[ main.spec:6:1 ]\n   │\n 6 │ ╭─▶ module edge_mod \"Edge\" {\n   ┆ ┆\n 9 │ ├─▶ }\n   │ │\n   │ ╰───────\n───╯\n\n[I067] Advice: module 'core_mod' contains no features\n   ╭─[ main.spec:1:1 ]\n   │\n 1 │ ╭─▶ module core_mod \"Core\" {\n   ┆ ┆\n 4 │ ├─▶ }\n   │ │\n   │ ╰───────\n───╯\n\n[I067] Advice: module 'edge_mod' contains no features\n   ╭─[ main.spec:6:1 ]\n   │\n 6 │ ╭─▶ module edge_mod \"Edge\" {\n   ┆ ┆\n 9 │ ├─▶ }\n   │ │\n   │ ╰───────\n───╯\n2 errors, 1 warning, 2 infos\n  E007 (2)\n  I067 (2)\n  W061 (1)\n\nhint: run `specforge explain <code>` for details on any diagnostic code\n"
}
