crates/specforge-cli/tests/snapshots/tests__check_surfaces__cli_check_json_body_parser_type_strict.snap
---
source: crates/specforge-cli/tests/check_surfaces.rs
expression: "normalized(&doc, dir.path())"
---
{
  "exit": 1,
  "stderr": "",
  "stdout": [
    {
      "code": "W002",
      "column": 1,
      "file": "main.spec",
      "line": 4,
      "message": "type 'Money' is not referenced by any behavior, port, or type",
      "severity": "Error",
      "span": {
        "end_col": 2,
        "end_line": 8,
        "file": "main.spec",
        "start_col": 1,
        "start_line": 4
      },
      "suggestion": null,
      "title": "Unreferenced type"
    },
    {
      "code": "W004",
      "column": 1,
      "file": "main.spec",
      "line": 4,
      "message": "type 'Money' is testable but declares no verify obligations",
      "severity": "Error",
      "span": {
        "end_col": 2,
        "end_line": 8,
        "file": "main.spec",
        "start_col": 1,
        "start_line": 4
      },
      "suggestion": null,
      "title": "Untested testable entity"
    },
    {
      "code": "W010",
      "column": 1,
      "file": "main.spec",
      "line": 4,
      "message": "type 'Money' field 'amount' has unknown annotation '@min'",
      "severity": "Error",
      "span": {
        "end_col": 2,
        "end_line": 8,
        "file": "main.spec",
        "start_col": 1,
        "start_line": 4
      },
      "suggestion": null,
      "title": "Unknown field annotation"
    }
  ]
}
