crates/specforge-cli/tests/snapshots/tests__check_surfaces__cli_check_json_missing_import.snap
---
source: crates/specforge-cli/tests/check_surfaces.rs
expression: "normalized(&doc, dir.path())"
---
{
  "exit": 1,
  "stderr": "",
  "stdout": [
    {
      "code": "E025",
      "column": 1,
      "data": {
        "kind": "unresolved_import",
        "path": "missing"
      },
      "file": "main.spec",
      "line": 1,
      "message": "import target not found: missing",
      "severity": "Error",
      "span": {
        "end_col": 14,
        "end_line": 1,
        "file": "main.spec",
        "start_col": 1,
        "start_line": 1
      },
      "suggestion": null,
      "title": "Import resolution failed"
    }
  ]
}
