crates/specforge-cli/tests/snapshots/tests__check_surfaces__cli_check_json_product_cycle_strict.snap
---
source: crates/specforge-cli/tests/check_surfaces.rs
expression: "normalized(&doc, dir.path())"
---
{
  "exit": 1,
  "stderr": "",
  "stdout": [
    {
      "code": "W061",
      "column": null,
      "file": null,
      "line": null,
      "message": "reference cycle detected: core_mod -> edge_mod -> core_mod",
      "severity": "Error",
      "span": null,
      "suggestion": "break the cycle by removing or inverting one reference",
      "title": "Reference cycle detected"
    },
    {
      "code": "E007",
      "column": 1,
      "file": "main.spec",
      "line": 1,
      "message": "module dependency cycle detected involving 'core_mod'",
      "severity": "Error",
      "span": {
        "end_col": 2,
        "end_line": 4,
        "file": "main.spec",
        "start_col": 1,
        "start_line": 1
      },
      "suggestion": null,
      "title": "Module dependency cycle"
    },
    {
      "code": "E007",
      "column": 1,
      "file": "main.spec",
      "line": 6,
      "message": "module dependency cycle detected involving 'edge_mod'",
      "severity": "Error",
      "span": {
        "end_col": 2,
        "end_line": 9,
        "file": "main.spec",
        "start_col": 1,
        "start_line": 6
      },
      "suggestion": null,
      "title": "Module dependency cycle"
    },
    {
      "code": "I067",
      "column": 1,
      "file": "main.spec",
      "line": 1,
      "message": "module 'core_mod' contains no features",
      "severity": "Info",
      "span": {
        "end_col": 2,
        "end_line": 4,
        "file": "main.spec",
        "start_col": 1,
        "start_line": 1
      },
      "suggestion": null,
      "title": "Module without features"
    },
    {
      "code": "I067",
      "column": 1,
      "file": "main.spec",
      "line": 6,
      "message": "module 'edge_mod' contains no features",
      "severity": "Info",
      "span": {
        "end_col": 2,
        "end_line": 9,
        "file": "main.spec",
        "start_col": 1,
        "start_line": 6
      },
      "suggestion": null,
      "title": "Module without features"
    }
  ]
}
